// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkupFormatter <ol> tag should correctly render list with numbered indexes 1`] = `
"[0m1. [0m[31mRed
[0m2. [0m[32mGreen
[0m3. [0m[34mBlue[0m"
`;

exports[`MarkupFormatter <ol> tag should correctly render multiline list elements with just a few elems 1`] = `
"[0m1. [0m[31mRed
[0m   [0m[31mRed[0m[31m
[0m2. [0m[32mGreen
[0m   [0m[32mGreen[0m[32m
[0m3. [0m[34mBlue
[0m   [0m[34mBlue[0m"
`;

exports[`MarkupFormatter <ol> tag should correctly render multiline list elements with more than 9 elements 1`] = `
"[0m1.  [0m[31mRed
[0m    [0m[31mRed[0m[31m
[0m2.  [0m[32mGreen
[0m    [0m[32mGreen[0m[32m
[0m3.  [0m[34mBlue
[0m    [0m[34mBlue[0m[34m
[0m4.  [0m[33mYellow
[0m    [0m[33mYellow[0m[33m
[0m5.  [0m[35mMagenta
[0m    [0m[35mMagenta[0m[35m
[0m6.  [0m[36mcyan
[0m    [0m[36mcyan[0m[36m
[0m7.  [0m[37mwhite
[0m    [0m[37mwhite[0m[37m
[0m8.  [0m[91mlightRed
[0m    [0m[91mlightRed[0m[91m
[0m9.  [0m[92mlightGreen
[0m    [0m[92mlightGreen[0m[92m
[0m10. [0m[93mlightYellow
[0m    [0m[93mlightYellow[0m[93m
[0m11. [0m[94mlightBlue
[0m    [0m[94mlightBlue[0m"
`;

exports[`MarkupFormatter <ol> tag should correctly render multiline list elements with more than 9 nested elements 1`] = `
"[0m1. [0mElement 1
[0m2. [0mElement 2
[0m3. [0mColors:
[0m   [0m1.  [0m[31mRed
[0m   [0m    [0m[31mRed[0m[31m
[0m   [0m2.  [0m[32mGreen
[0m   [0m    [0m[32mGreen[0m[32m
[0m   [0m3.  [0m[34mBlue
[0m   [0m    [0m[34mBlue[0m[34m
[0m   [0m4.  [0m[33mYellow
[0m   [0m    [0m[33mYellow[0m[33m
[0m   [0m5.  [0m[35mMagenta
[0m   [0m    [0m[35mMagenta[0m[35m
[0m   [0m6.  [0m[36mcyan
[0m   [0m    [0m[36mcyan[0m[36m
[0m   [0m7.  [0m[37mwhite
[0m   [0m    [0m[37mwhite[0m[37m
[0m   [0m8.  [0m[91mlightRed
[0m   [0m    [0m[91mlightRed[0m[91m
[0m   [0m9.  [0m[92mlightGreen
[0m   [0m    [0m[92mlightGreen[0m[92m
[0m   [0m10. [0m[93mlightYellow
[0m   [0m    [0m[93mlightYellow[0m[93m
[0m   [0m11. [0m[94mlightBlue
[0m   [0m    [0m[94mlightBlue[0m[94m
[0m   [0m12. [0m[95mlightMagenta
[0m   [0m    [0m[95mlightMagenta[0m[95m
[0m   [0m"
`;

exports[`MarkupFormatter <ol> tag should correctly render nested list 1`] = `
"[0m1. [0m[31mRed
[0m2. [0m[32mGreen
[0m3. [0mShades of blue
[0m   [0m1. [0m[34mBlue
[0m   [0m2. [0m[38;2;0;147;175mMunsell
[0m   [0m3. [0m[38;2;204;204;255mPeriwinkle
[0m   [0m"
`;

exports[`MarkupFormatter <pad> tag should correctly add padding for multiline text 1`] = `
"[0m  [0mLine 1
[0m  [0mLine 2
[0m  [0mLine 3[0m"
`;

exports[`MarkupFormatter <pad> tag should correctly add padding for multiline text with nested tags 1`] = `
"[0m  [0mLine 1
[0m  [0mLine 2
[0m  [0mtag 1[0m [0mtag 2[0m"
`;

exports[`MarkupFormatter <pad> tag should correctly add padding for nested pad tags 1`] = `
"[0m  [0mLine 1
[0m  [0mLine 2
[0m  [0m  [0mtag 1[0m [0mtag 2[0m"
`;

exports[`MarkupFormatter <pad> tag should correctly add padding for simple text 1`] = `"[0m  Test[0m"`;

exports[`MarkupFormatter <pad> tag should not do anything id the size is not specified 1`] = `"[0mTest[0m"`;

exports[`MarkupFormatter <ul> tag should correctly render list with bullet indexes 1`] = `
"[0m● [0m[31mRed
[0m● [0m[32mGreen
[0m● [0m[34mBlue[0m"
`;

exports[`MarkupFormatter <ul> tag should correctly render multiline list elements 1`] = `
"[0m□ [0m[31mRed
[0m  [0m[31mRed[0m[31m
[0m□ [0m[32mGreen
[0m  [0m[32mGreen[0m[32m
[0m□ [0m[34mBlue
[0m  [0m[34mBlue[0m"
`;

exports[`MarkupFormatter <ul> tag should correctly render nested list 1`] = `
"[0m● [0m[31mRed
[0m● [0m[32mGreen
[0m● [0mShades of blue
[0m  [0m○ [0m[34mBlue
[0m  [0m○ [0m[38;2;0;147;175mMunsell
[0m  [0m○ [0m[38;2;204;204;255mPeriwinkle
[0m  [0m"
`;

exports[`MarkupFormatter should correctly format the xml scenario 1 1`] = `
"[0mHello World
[0m[31m[1mRed[0m[34m[1m or blue? [0m[31m[1mtext
[0mThis[0m is [0mone [0mline[0m"
`;

exports[`MarkupFormatter should correctly format the xml scenario 2 1`] = `"[0m[31mRed[0m[32mGreen[0m[34mBlue[0mNormal[0m"`;

exports[`MarkupFormatter should correctly format the xml scenario 3 1`] = `
"[0m[31mRed[0m
[0m[32mGreen[0m
[0m[34mBlue[0m
[0mNormal[0m"
`;

exports[`MarkupFormatter should correctly format the xml scenario 4 1`] = `"[0m[31m[1m[3m[4m Red [0m[32m[1m[3m[4m Green [0m"`;

exports[`MarkupFormatter should correctly format the xml scenario 5 1`] = `"[0m[33m[1m[5mLorem [0m[34m[1m[5mipsum [0m[32m[1m[2m[5mdolor [0m[32m[1m[2m[5m[7msit [0m[32m[1m[2m[5mamet[0m[34m[1m[5m consectetur [0m[33m[1m[5madipiscing [0m"`;

exports[`MarkupFormatter should correctly format the xml scenario 6 1`] = `"[0m[38;2;137;245;209mGreen[0m[38;2;245;170;66m [0m[34mBlue[0m[38;2;245;170;66m [0m[38;2;245;170;66mOrange[0m"`;

exports[`MarkupFormatter should correctly format the xml scenario 7 1`] = `"[0m[33m[4mLorem [0m[34m[9mipsum [0m[32m[2m[9mdolor [0m[34m[9m sit [0m[33m[4mamet[0m"`;
